Fix for fixed header position
Setting explicit positioning to the sticky header helps to make it
more robust. Previously, additional UI elements (e.g., introduced by the personal toolbar)
could push the header down generating a gap that made the UI look broken.

--- a/modules/header/styles/ext.cx.header.less
+++ b/modules/header/styles/ext.cx.header.less
@@ -77,6 +77,8 @@
 .cx-header.sticky {
 	.mw-ui-two-thirds;
 	position:fixed;
+	top: 0;
+	left: 0;
 	background: #fff;
 	background: rgba(255,255,255,0.95);
 	padding-top: 5px;
